--- version 0.4 (xx/xx/xxxx) ---
Added ability to export Fog (Blender Mist). Irrlicht default (video driver)
Fog settings are located in iConfig.py "SceneAttributes".
"Fog.Enabled" is controlled by enabling/disable Blenders World Mist.
"Start", "End", & "Density" are also overridden use Blenders World
Mist options. "Fog.Color" is set using Blender's World-Horizon color. 

Update to only export objects contained in active/visible layers.

Update to allow partial UserConfig definitions.

Added ability to write all game properties to scene node "userData".

Added hardware mapping hint ID properties ("HWMappingHint" & 
"HWMappingBufferType") for mesh objects.  The defaults are
"static" (EHM_STATIC) &  "vertexindex" (EBT_VERTEX_AND_INDEX).

Added exporting of physics attributes to mesh scene nodes. The attributes
are added to the "UserData" section of the node info. These attributes
may be read via the ISceneUserDataSerializer interface and feed into
the applications physics system (Bullet, Irrlicht (collision), PhysX, etc.).

Updated to allow custom materials (${materialtype}) to optionally specify
vertext type: ${materialtype}:{vertextype} where {vertextype} may be: 
'standard' (default), '2tcoords', or 'tangents'. Example: '$mymat:tangents',
would generate a material type named 'mymat' with EVT_TANGENTS vertices.

Updated to allow EVT_TANGENTS vertex type to be created for materials that
require it (normalmap_x, parallaxmap_x). Automatically detected & created.

Updated to allow a single mesh to contain more than 64k vertices (32 bit
indices). Applications will require the CIrrMeshWriter.cpp & 
CIrrMeshFileLoader.cpp patch.

bug fix - When manual entering directory paths, incorrect path was being 
returned by "CheckDirectory".

Added "Blender Version", "Platform uname", and iwalktest/imeshcvt env
variables to irrb.log file.

--- version 0.3 (02/10/2009) ---
Fixed "vertex colors" - Blender vertex colors are written if vertex color
exists and: