@@ -1,4 +1,7 @@
 --- version 0.4 (xx/xx/xxxx) ---
+.irr Scene attribute "AmbientLight" is now written using Blender's World
+ambient light value.
+
 Added ability to export Fog (Blender Mist). Irrlicht default (video driver)
 Fog settings are located in iConfig.py "SceneAttributes".
 "Fog.Enabled" is controlled by enabling/disable Blenders World Mist.
